fix syncClient